set05/problem04_compile_errors.txt
Compilation started at 11/16/2023, 3:04:42 PM
Compilation finished at 11/16/2023, 3:04:43 PM
Compilation started at 11/16/2023, 3:06:20 PM
Compilation finished at 11/16/2023, 3:06:20 PM
Compilation started at 11/16/2023, 3:09:46 PM
Compilation finished at 11/16/2023, 3:09:46 PM
Compilation started at 11/16/2023, 3:11:50 PM
Compilation finished at 11/16/2023, 3:11:50 PM
Compilation started at 11/16/2023, 3:12:50 PM
c:\FPC_Advanced\fpc-advanced-classroom-1st-year-assignment-Sanjay2408\set05\problem04.c: In function 'main':
c:\FPC_Advanced\fpc-advanced-classroom-1st-year-assignment-Sanjay2408\set05\problem04.c:11:33: error: expected expression before ')' token
     output(radius,height,length,);
                                 ^
c:\FPC_Advanced\fpc-advanced-classroom-1st-year-assignment-Sanjay2408\set05\problem04.c:11:5: error: too many arguments to function 'output'
     output(radius,height,length,);
     ^~~~~~
c:\FPC_Advanced\fpc-advanced-classroom-1st-year-assignment-Sanjay2408\set05\problem04.c:4:6: note: declared here
 void output(float radius, float height, float length);
      ^~~~~~
Compilation finished at 11/16/2023, 3:12:50 PM
Compilation started at 11/16/2023, 3:13:02 PM
Compilation finished at 11/16/2023, 3:13:02 PM
